refactor: ajuste no metodo para calcular o PorPerCapitaLiquida do a ficha tecnica